--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,282 @@
 @import url("./blocks/popup/__input-error/_active/popup__input-error_active.css");
 
 @import url("./blocks/place/__likes/place__likes.css");
+
+.tooltip {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 60px 36px;
+    width: 100%;
+    height: 330px;
+    background: #FFFFFF;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    box-sizing: border-box;
+}
+
+.tooltip__text {
+    font-family: 'Inter', 'Arial', 'Georgia', 'Tahoma', sans-serif;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 29px;
+    text-align: center;
+    color: #000000;
+    margin: 32px 0 0;
+}
+
+.popup__error {
+    position: absolute;
+    top: calc(100% + 5px);
+    left: 0;
+    font-family: 'Inter', 'Arial', 'Georgia', 'Tahoma', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    color: #FF0000;
+    z-index: 1;
+  }
+
+  .header__logo-link {
+    text-decoration: none;
+    display: block;
+}
+
+.header__link {
+    font-family: 'Inter', 'Arial', 'Georgia', 'Tahoma', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: #FFFFFF;
+    text-decoration: none;
+    transition: .2s linear opacity;
+    margin-left: 24px;
+}
+
+.header__link:hover {
+    opacity: .6;
+}
+
+.header__info {
+    margin-left: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media screen and (max-width: 1024px) {
+    .header__info {
+        padding-right: 27px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .header__info {
+        flex-direction: column;
+    }
+}
+
+.header__email {
+    font-family: 'Inter', 'Arial', 'Georgia', 'Tahoma', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+    color: #FFFFFF;
+    margin: 0;
+    padding: 0;
+}
+
+.auth {
+    position: relative;
+    width: 100%;
+    max-width: 430px;
+  }
+
+  .auth__title {
+    font-family: 'Inter', 'Arial', 'Georgia', 'Tahoma', sans-serif;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 29px;
+    color: #fff;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+  }
+  
+  @media screen and (max-width: 450px) {
+    .auth__title {
+      font-size: 18px;
+      line-height: 22px;
+    }
+  }
+
+  .auth__submit-btn {
+    height: 50px;
+    border: none;
+    font-family: 'Inter', 'Arial', 'Georgia', 'Tahoma', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+    color: #000;
+    padding: 0;
+    transition: opacity .2s linear;
+    cursor: pointer;
+    background: #FFFFFF;
+    border-radius: 2px;
+    margin-top: 186px;
+  }
+  
+  .auth__submit-btn:hover {
+    opacity: .8;
+  }
+  
+  @media screen and (max-width: 450px) {
+    .auth__submit-btn {
+      height: 46px;
+      font-size: 14px;
+      line-height: 17px;
+    }
+  }
+
+  
+  .auth__submit-btn_disabled {
+    background-color: transparent;
+    border: 1px solid #fff;
+    color: #000;
+    cursor: initial;
+    opacity: .2;
+  }
+  
+  .auth__submit-btn_disabled:hover {
+    opacity: .2;
+  }
+
+  .auth__option {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+}
+
+@media screen and (max-width: 768px) {
+    .auth__option {
+        flex-direction: column;
+        gap: 5px;
+    }
+}
+
+
+.auth__option-text {
+    font-family: 'Inter', 'Arial', 'Georgia', 'Tahoma', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    color: #FFFFFF;
+    margin: 0;
+    padding: 0;
+}
+
+
+.auth__option-link {
+    font-family: 'Inter', 'Arial', 'Georgia', 'Tahoma', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    color: #FFFFFF;
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+    transition: opacity .2s linear;
+}
+
+.auth__option-link:hover {
+    opacity: .6;
+}
+
+.auth__input {
+    border: none;
+    height: 27px;
+    border-bottom: 2px solid #CCCCCC;
+    font-family: 'Inter', 'Arial', 'Georgia', 'Tahoma', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    color: white;
+    text-align: left;
+    width: 100%;
+    background: transparent;
+    box-sizing: border-box;
+    padding: 0 0 13px;
+  }
+  
+  .auth__input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 30px black inset;
+    -webkit-text-fill-color: white;
+  }
+  
+  .auth__input:focus-visible {
+    outline: none;
+  }
+
+  .auth__input_type_error {
+    border-bottom: 1px solid #FF0000;
+  }
+
+  .auth__input-container {
+    position: relative;
+    margin: 0 0 30px 0;
+    padding: 0;
+  }
+  
+  .auth__input-container:first-of-type {
+    margin-top: 50px;
+  }
+  
+  .auth__input-container:last-of-type {
+    margin-bottom: 0;
+  }
+
+  .auth__form {
+    width: 100%;
+    background: transparent;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    padding: 60px 36px 37px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-sizing: border-box;
+  }
+  
+  @media screen and (max-width: 450px) {
+    .auth__form {
+      padding: 25px 22px;
+    }
+  }
+
+  .auth__error {
+    position: absolute;
+    top: calc(100% + 5px);
+    left: 0;
+    font-family: 'Inter', 'Arial', 'Georgia', 'Tahoma', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    color: #FF0000;
+    z-index: 1;
+  }
+  
