--- a/src/blocks/popup/__close-button/popup__close-button.css
+++ b/src/blocks/popup/__close-button/popup__close-button.css
@@ -10,6 +10,8 @@
     padding: 0;
     top: -40px;
     right: -40px;
+    background-position: 50%;
+    background-size: cover;
 }
 
 .popup__close-button:hover {
