--- a/src/blocks/footer/__copyright/footer__copyright.css
+++ b/src/blocks/footer/__copyright/footer__copyright.css
@@ -4,10 +4,10 @@
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
-    line-height: 22px;
+    line-height: 1.2;
     color: rgba(84, 84, 84);
     margin: 0;
-    padding: 0;
+    padding-bottom: 30px;
 }
 
 @media (max-width: 320px) {
