--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -7,5 +7,7 @@
     -webkit-text-size-adjust: 100%;
     background-color: rgba(0, 0, 0);
     margin: 0 auto;
+    min-height: 100vh;
+    width: 100%;
  }
  
