--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,10 @@
 /*header*/
 @import url("./blocks/header/header.css");
 @import url("./blocks/header/__logo/header__logo.css");
-@import url("./blocks/header/__link/.header__link.css");
+@import url("./blocks/header/__link/header__link.css");
 @import url("./blocks/header/__logo-link/header__logo-link.css");
-@import url("./blocks/header/__info/.header__info.css");
-@import url("./blocks/header/__email/.header__email.css");
+@import url("./blocks/header/__email/header__email.css");
+@import url("./blocks/header/__info/header__info.css");
 /*profile*/
 @import url("./blocks/profile/profile.css");
 @import url("./blocks/profile/__avatar/profile__avatar.css");
@@ -73,3 +73,5 @@
 @import url("./blocks/auth/__input/_type/_error/auth__input_type_error.css");
 @import url("./blocks/auth/__error/auth__error.css");
 @import url("./blocks/auth/__input-container/auth__input-container.css");
+
+
