--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -1,5 +1,4 @@
 .header__link {
-    font-family: 'Inter', 'Arial', 'Georgia', 'Tahoma', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -11,6 +10,10 @@
     padding: 0px 0 15px 24px;
 }
 
+.header__link:hover {
+    opacity: 0.6;
+}
+
 @media screen and (max-width: 500px){
 .header__link {
     font-size: 14px;
@@ -18,6 +21,3 @@
 }
 }
 
-.header__link:hover {
-    opacity: .6;
-}
